# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.15

Version 8.0.14

  - WL#12298, Connectors: Expose metadata about source and binaries in unified way.

  - Fix for Bug#93111 (28894344), ConnectionUrl.java contains char U+00A7 (section sign).

  - WL#12621, DevAPI: Handling of Default Schema.

  - Fix for Bug#93340 (28970166), C/J BUILD SCRIPT IS TOO VERBOSE

  - WL#12462, DevAPI: Be prepared for initial notice on connection.

  - Fix for Bug#28924137, WL#12463:IF COLLECTION DOESN'T EXIST, COLL.COUNT() IS GIVING A WRONG ERROR MESSAGE.

  - WL#12463, DevAPI: Standardize count method.

  - Fix for Bug#92508 (28747636), mysql-connector in bootclasspath causing memory leak.

  - Fix for Bug#25650514, UPDATEROW() CALL FAILS WITH NPE WHEN SSPS=TRUE AND TABLE HAS MULTI-FLD KEY.

  - Fix for Bug#25650482, REFRESHROW() CALL AFTER UPDATEROW() API FAILS WHEN USESERVERPREPSTMTS=TRUE.

  - Fix for Bug#92536 (28692243), UPDATEING SERVER SIDE PREPSTMTS RESULTSET FAIL.

  - Fix for Bug#92625 (28731795), CONTRIBUTION: FIX OBSERVED NPE IN CLEARINPUTSTREAM.
    Thanks to Henning Schmiedehausen for his contribution.

  - Fix for Bug#23045642, ADDING NO-DOC (MYSQLCONNJ-696) RESULTS IN EXCEPTION.

  - Fix for Bug#91065 (28101003), ZERODATETIMEBEHAVIOR=CONVERT_TO_NULL SHOULD NOT APPLY TO 00:00:00 TIME COLUMNS.

  - Fix for Bug#92574 (28706219), WHEN CONVERTING FROM VARCHAR TO JAVA BOOLEAN, 'N' IS NOT SUPPORTED.

  - Fix for Bug#25642226, CHANGEUSER() NOT SETTING THE DATABASE PROPERLY WITH SHA USER.

  - Fix for Bug#28606708, NAMED PIPE CONNECTION FOR X PROTOCOL RETURNS NPE, EXPECTED PROPER ERROR MESSAGE.

Version 8.0.13

  - Fix for Bug#91317 (28207422), Wrong defaults on collation mappings.

  - WL#12245, DevAPI: Implement connect timeout.

  - Fix for Bug#21774249, UNIT TEST FAILS WITH ERROR " 'CEST' IS UNRECOGNIZED TIME ZONE".

  - WL#11857, DevAPI: Implement connection pooling for xprotocol.
